<!--
  ~ Copyright (c) 2019 meil
  ~
  ~ This file is part of MdNote.
  ~
  ~ MdNote is free software: you can redistribute it and/or modify
  ~ it under the terms of the GNU Lesser General Public License as published by
  ~ the Free Software Foundation, either version 3 of the License, or
  ~ (at your option) any later version.
  ~
  ~ MdNote is distributed in the hope that it will be useful,
  ~ but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~ MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~ GNU Lesser General Public License for more details.
  ~
  ~ You should have received a copy of the GNU Lesser General Public License
  ~ along with MdNote.  If not, see <http://www.gnu.org/licenses/>.
  -->

<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name" translatable="false">MdNote</string>
    <string name="app_description">This application is developed as Open Source Software, and published by %1$s.\nAnd also, this application is created by %2$s.\n\nEveryone can use this application, but in no event shall the creator be liable for any.</string>
    <string name="app_author" translatable="false">MeilCli</string>
    <string name="app_repository_url" translatable="false">https://github.com/MeilCli/MdNote</string>
    <string name="app_license" translatable="false">GNU Lesser General Public License v3.0</string>
    <string name="app_license_url" translatable="false">https://github.com/MeilCli/MdNote/blob/master/LICENSE</string>

    <string name="tab_note">Note</string>
    <string name="tab_memo">Memo</string>
    <string name="tab_setting">Setting</string>

    <string name="setting_menu_app_info">About This Application</string>
    <string name="setting_menu_oss_license">Open Source Software License</string>
    <string name="setting_menu_privacy_policy">Privacy Policy</string>

    <string name="library_description" translatable="false">Thanks %1$s.\n\nMdNote is using %1$s, and %1$s is published by %2$s.</string>
    <string name="library_repository_link" translatable="false">Repository Link</string>
    <string name="library_license_link" translatable="false">License Link</string>

    <string name="editor_new">New Create</string>
    <string name="editor_open">Open</string>
    <string name="editor_error">Error</string>
    <string name="editor_error_plugins">Not installed plugins</string>
    <string name="editor_title_hint" translatable="false">Title</string>
    <string name="editor_input_hint" translatable="false">Write markdown...</string>
    <string name="editor_default_note">A default note editor</string>
    <string name="editor_default_memo">A default memo editor</string>

    <string name="permission_denied">cancel because permission denied</string>
    <string name="permission_never_ask_again">please grant permission to app in android setting</string>

    <string name="explorer_not_available_storage">Not Available Storage</string>
    <string name="explorer_select_folder">Select Folder</string>

    <string name="icon" translatable="false">Icon</string>
    <string name="select">select</string>
    <string name="cancel" tools:ignore="ButtonCase">cancel</string>
</resources>
