<?xml version="1.0" encoding="utf-8"?><!--
  ~ Copyright (c) 2019 meil
  ~
  ~ This file is part of MdNote.
  ~
  ~ MdNote is free software: you can redistribute it and/or modify
  ~ it under the terms of the GNU Lesser General Public License as published by
  ~ the Free Software Foundation, either version 3 of the License, or
  ~ (at your option) any later version.
  ~
  ~ MdNote is distributed in the hope that it will be useful,
  ~ but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~ MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~ GNU Lesser General Public License for more details.
  ~
  ~ You should have received a copy of the GNU Lesser General Public License
  ~ along with MdNote.  If not, see <http://www.gnu.org/licenses/>.
  -->

<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/tab_note"
        android:icon="@drawable/ic_book_black_24dp"
        android:title="@string/tab_note" />
    <item
        android:id="@+id/tab_memo"
        android:icon="@drawable/ic_description_black_24dp"
        android:title="@string/tab_memo" />
    <item
        android:id="@+id/tab_setting"
        android:icon="@drawable/ic_settings_black_24dp"
        android:title="@string/tab_setting" />
</menu>